<resources>
    <string name="app_name">PloApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_how_much">HOW MUCH</string>
    <string name="text_type">TYPE</string>
    <string name="text_color">COLOR</string>
    <string name="text_what_did_you_make">WHAT DID YOU MAKE?</string>
    <string name="text_done">DONE</string>
    <string name="text_statistics">STATISTICS</string>
    <string name="text_new_poo">NEW POO</string>
    <string name="text_ploapp">PloApp</string>
    <string name="text_love_label">-- To Polpetta with love --</string>
    <string name="text_options">OPTIONS</string>
    <string name="text_there_was_pain">THERE WAS PAIN</string>
    <string name="text_poo_contains_blood">POO CONTAINS BLOOD</string>
    <string name="text_i_used_an_enema">I USED AN ENEMA</string>
    <string name="text_ciclo">CICLO</string>
    <string name="text_back">BACK</string>
    <string name="text_blood">BLOOD</string>
    <string name="text_enema">ENEMA</string>
    <string name="text_aches_and_pains">ACHES AND PAINS</string>
    <string name="text_period">PERIOD</string>
    <string name="text_no_blood">No blood</string>
    <string name="text_some_blood">Some blood</string>
    <string name="text_not_used">Not used</string>
    <string name="text_used">Used</string>
    <string name="text_no_one">No one</string>
    <string name="text_cramps">Cramps</string>
    <string name="text_nausea">Nausea</string>
    <string name="text_swelling">Swelling</string>
    <string name="text_not_now">Not now</string>
    <string name="text_yes">Yes</string>
</resources>