<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.newpoo.NewPooOptionFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/options_ciclo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:alpha="0.5"
        app:cardBackgroundColor="@color/teal_700"
        app:cardCornerRadius="50dp"
        app:layout_constraintStart_toEndOf="@+id/options_ciclo_ok"
        app:layout_constraintTop_toTopOf="@+id/options_ciclo_ok">

        <ImageButton
            android:id="@+id/image_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/text_period"
            app:srcCompat="@drawable/ciclo"
            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/options_ciclo_ok"
        app:cardBackgroundColor="@color/teal_700"
        app:cardCornerRadius="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:alpha="1">

        <ImageButton
            android:id="@+id/image_no_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/all_ok"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/options_pain_ok"
        app:cardBackgroundColor="@color/ploapp_launcher_logo_background"
        app:cardCornerRadius="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:alpha="1">

        <ImageButton
            android:id="@+id/image_no_pain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/all_ok"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/options_enema"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:alpha="0.5"
        app:cardBackgroundColor="@color/purple_200"
        app:cardCornerRadius="50dp"
        app:layout_constraintStart_toEndOf="@+id/options_enema_ok"
        app:layout_constraintTop_toTopOf="@+id/options_enema_ok">

        <ImageButton
            android:id="@+id/image_enema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/enema"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/options_enema_ok"
        app:cardBackgroundColor="@color/purple_200"
        app:cardCornerRadius="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:alpha="1">

        <ImageButton
            android:id="@+id/image_no_enema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/all_ok"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/options_nausea"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:alpha="0.5"
        app:cardBackgroundColor="@color/ploapp_launcher_logo_background"
        app:cardCornerRadius="50dp"
        app:layout_constraintStart_toEndOf="@+id/options_crampi"
        app:layout_constraintTop_toTopOf="@+id/options_crampi">

        <ImageButton
            android:id="@+id/image_nausea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/nausea"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/options_crampi"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:alpha="0.5"
        app:cardBackgroundColor="@color/ploapp_launcher_logo_background"
        app:cardCornerRadius="50dp"
        app:layout_constraintStart_toEndOf="@+id/options_pain_ok"
        app:layout_constraintTop_toTopOf="@+id/options_pain_ok">

        <ImageButton
            android:id="@+id/image_cramps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/crampi"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/options_gonfiore"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:alpha="0.5"
        app:cardBackgroundColor="@color/ploapp_launcher_logo_background"
        app:cardCornerRadius="50dp"
        app:layout_constraintStart_toEndOf="@+id/options_nausea"
        app:layout_constraintTop_toTopOf="@+id/options_nausea">

        <ImageButton
            android:id="@+id/image_swelling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/gonfiore2"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/options_blood_drop"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:alpha="0.5"
        app:cardBackgroundColor="#E3BA5B"
        app:cardCornerRadius="50dp"
        app:layout_constraintStart_toEndOf="@+id/options_blood_ok"
        app:layout_constraintTop_toTopOf="@+id/options_blood_ok">

        <ImageButton
            android:id="@+id/image_blood_drop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/blood_drop"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/options_blood_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_blood"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/options_blood_ok"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:alpha="1"
        app:cardBackgroundColor="#E3BA5B"
        app:cardCornerRadius="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/options_blood_label">

        <ImageButton
            android:id="@+id/image_no_blood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:tint="#E40C0C"
            app:srcCompat="@drawable/all_ok"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_blood_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_enema"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_enema_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_aches_and_pains"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_pain_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_period"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        app:icon="@drawable/icon_arrow_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_back" />

    <TextView
        android:id="@+id/no_blood_label"
        app:layout_constraintEnd_toEndOf="@+id/options_blood_ok"
        app:layout_constraintStart_toStartOf="@+id/options_blood_ok"
        app:layout_constraintTop_toBottomOf="@+id/options_blood_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:alpha="0.8"
        android:gravity="center"
        android:text="@string/text_no_blood"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/blood_drop_label"
        app:layout_constraintEnd_toEndOf="@+id/options_blood_drop"
        app:layout_constraintStart_toStartOf="@+id/options_blood_drop"
        app:layout_constraintTop_toBottomOf="@+id/options_blood_drop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:alpha="0.8"
        android:gravity="center"
        android:text="@string/text_some_blood"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/no_enema_label"
        app:layout_constraintEnd_toEndOf="@+id/options_enema_ok"
        app:layout_constraintStart_toStartOf="@+id/options_enema_ok"
        app:layout_constraintTop_toBottomOf="@+id/options_enema_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:alpha="0.8"
        android:gravity="center"
        android:text="@string/text_not_used"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/used_enema_label"
        app:layout_constraintEnd_toEndOf="@+id/options_enema"
        app:layout_constraintStart_toStartOf="@+id/options_enema"
        app:layout_constraintTop_toBottomOf="@+id/options_enema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:alpha="0.8"
        android:gravity="center"
        android:text="@string/text_used"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/no_pain_label"
        app:layout_constraintEnd_toEndOf="@+id/options_pain_ok"
        app:layout_constraintStart_toStartOf="@+id/options_pain_ok"
        app:layout_constraintTop_toBottomOf="@+id/options_pain_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:alpha="0.8"
        android:gravity="center"
        android:text="@string/text_no_one"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/cramps_label"
        app:layout_constraintEnd_toEndOf="@+id/options_crampi"
        app:layout_constraintStart_toStartOf="@+id/options_crampi"
        app:layout_constraintTop_toBottomOf="@+id/options_crampi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:alpha="0.8"
        android:gravity="center"
        android:text="@string/text_cramps"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/nausea_label"
        app:layout_constraintEnd_toEndOf="@+id/options_nausea"
        app:layout_constraintStart_toStartOf="@+id/options_nausea"
        app:layout_constraintTop_toBottomOf="@+id/options_nausea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:alpha="0.8"
        android:gravity="center"
        android:text="@string/text_nausea"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/swelling_label"
        app:layout_constraintEnd_toEndOf="@+id/options_gonfiore"
        app:layout_constraintStart_toStartOf="@+id/options_gonfiore"
        app:layout_constraintTop_toBottomOf="@+id/options_gonfiore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:alpha="0.8"
        android:gravity="center"
        android:text="@string/text_swelling"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/no_period_label"
        app:layout_constraintEnd_toEndOf="@+id/options_ciclo_ok"
        app:layout_constraintStart_toStartOf="@+id/options_ciclo_ok"
        app:layout_constraintTop_toBottomOf="@+id/options_ciclo_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:alpha="0.8"
        android:gravity="center"
        android:text="@string/text_not_now"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/period_label"
        app:layout_constraintEnd_toEndOf="@+id/options_ciclo"
        app:layout_constraintStart_toStartOf="@+id/options_ciclo"
        app:layout_constraintTop_toBottomOf="@+id/options_ciclo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:alpha="0.8"
        android:gravity="center"
        android:text="@string/text_yes"
        android:textSize="12sp" />

</androidx.constraintlayout.widget.ConstraintLayout>